--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "neil_portfolio",
   "version": "0.1.0",
-  "homepage": "https://nhharm.github.io/",
+  "homepage": "https://nhharm.github.io",
   "private": false,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
